WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265394
Constant determinant function breaks with f16
https://bugs.webkit.org/show_bug.cgi?id=265394
Summary
Constant determinant function breaks with f16
Tadeu Zagallo
Reported
2023-11-27 11:36:48 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-11-27 11:36:59 PST
<
rdar://problem/118843391
>
Tadeu Zagallo
Comment 2
2023-11-27 11:41:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20943
EWS
Comment 3
2023-11-28 06:56:41 PST
Committed
271206@main
(921f26d0f788): <
https://commits.webkit.org/271206@main
> Reviewed commits have been landed. Closing PR #20943 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug