[WGSL] Constant determinant function breaks with f16 https://bugs.webkit.org/show_bug.cgi?id=265394 rdar://118843391

Reviewed by Mike Wyrzykowski.

The helper lambads in constantDeterminant need to explicitly type the result
as the f16/half values will be implicitly casted to float.

* Source/WebGPU/WGSL/ConstantFunctions.h:
(WGSL::CONSTANT_FUNCTION):
* Source/WebGPU/WGSL/tests/valid/overload.wgsl:

Canonical link: https://commits.webkit.org/271206@main